MP Statistics Fixes

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -91,18 +91,20 @@
 												<span style="font-size:300px;color:green;">person</span>
 											</div>
 	        							</div>
-	        							<div class="left-box-body">
+	        							<div class="left-box">
 	        								<h5>Recruiter Details</h5>
-	        								<table>
-	        									<tr>
-	        										<th>Name</th>
-	        										<td>{{selectedListing.ownerName}}</td>
-	        									</tr>
-	        									<tr>
-	        										<th>Company</th>
-	        										<td>{{selectedListing.ownerCompany}}</td>
-	        									</tr>
-	        								</table>
+	        								<div class="left-box-body">
+		        								<table>
+		        									<tr>
+		        										<th>Name</th>
+		        										<td>{{selectedListing.ownerName}}</td>
+		        									</tr>
+		        									<tr>
+		        										<th>Company</th>
+		        										<td>{{selectedListing.ownerCompany}}</td>
+		        									</tr>
+		        								</table>
+	        								</div>
 	        							</div>
 	        						</div>
 	        						
