listing look and feel

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -109,7 +109,7 @@
 	        						</div>
 	        						
 	        						<div class="left-box" *ngIf="selectedListing.country || selectedListing.location">
-	        							<h5>Locations</h5>
+	        							<h5>Location</h5>
 	        							<div class="left-box-body">
 	        								<table>
 	        									<tr *ngIf="selectedListing.country">
