--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -299,3 +299,44 @@ a {
 .suggestion-button{
 	margin-right:5px;
 }
+
+
+.left-box{
+	min-width:300px;
+	margin-bottom:30px;
+	max-width:300px;
+}
+
+.left-box-body{
+	padding:5px;
+	background:#e8e8e8;
+}
+
+.left-box table{
+	width:100%;
+}
+
+.left-box table th{
+	width:120px;
+}
+
+.left-box h5{
+	border-bottom:2px solid black;
+}
+
+.skill{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ 	background:green;
+ 	color:white;
+}
+
+.profile-photo-details{
+	width:300px;
+	height:320px;
+	border:2px solid lightgrey;
+	margin-bottom:10px;
+}
