--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -159,6 +159,7 @@
 					<th class="pendingCandidateBox-th">First Name</th>
 					<th class="pendingCandidateBox-th">Surname</th>
 					<th class="pendingCandidateBox-th">Email</th>
+					<th>actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -173,6 +174,10 @@
 					<td class="pendingCandidateBox-td" (click)="loadPendingCandidate(pendingCandidate)">{{pendingCandidate.firstname}}</td>
 					<td class="pendingCandidateBox-td" (click)="loadPendingCandidate(pendingCandidate)">{{pendingCandidate.surname}}</td>
 					<td class="pendingCandidateBox-td" (click)="loadPendingCandidate(pendingCandidate)">{{pendingCandidate.email}}</td>
+					<td class="pendingCandidateBox-td">
+						<button class="btn btn-secondary action-btn" (click)="deletePendingCurriculum(pendingCandidate, false)">Delete</button>
+					</td>
+					
 				</tr>
 			</tbody>
 		</table>
