--- a/recruit-gui/src/app/create-candidate/create-candidate.component.css
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.css
@@ -75,7 +75,7 @@
 .center-table{
     margin:0 auto;
     margin-top:25px;
-    max-width:400px;
+    max-width:800px;
 }
 
 .tb-lbl{
@@ -93,4 +93,19 @@
 .div-spacing{
 	margin-top:40px;
 }
+
+.additional-info{
+	margin-top:40px;
+}
+
+table th{
+	width:220px;
+}
+
+textarea{
+	width:100%;
+	height:100px;
+}
+
+
 
