--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -111,3 +111,11 @@
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.action-btn{
+	width:100px;
+	margin-top:5px;
+	margin-left:5px;
+	padding-left:0px;
+	padding-right:5px;
+} 
