--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -340,3 +340,34 @@ a {
 	border:2px solid lightgrey;
 	margin-bottom:10px;
 }
+
+.main-btns{
+	width:200px;
+	margin-right:10px;
+	margin-bottom:10px;
+	margin-top:5px;
+	
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-body{
+	font-size: large;
+	height:200px;
+	text-align: center;
+}
+
+.modal-body-text{
+	vertical-align: middle;
+	margin-top: 60px;
+	font-weight: bold;
+}
+
+.feedbackBox{
+	padding:20px;
+	min-height:200px;
+	font-weight:bold;
+	width:100%;
+}
