--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -9,8 +9,8 @@
 				<div>
 					<!-- Action buttons -->
 					<div class="action-buttons">
-						<button class="btn btn-secondary btn-listing" routerLink="/listing">Back</button>
 						<button (click)="showAdd()" class="btn btn-secondary btn-listing">Add Job</button>
+						<button class="btn btn-secondary btn-listing" routerLink="/listing">Back</button>
 					</div>
 			
 					<div style="text-align:center">
@@ -70,10 +70,11 @@
 	   			
 	   				<!-- Action buttons -->
 					<div class="action-buttons">
-						<button (click)="showList()" class="btn btn-secondary btn-listing">Back</button>
+						<button class="btn btn-secondary btn-listing" (click)="showPublicity(publicityBox)">Publicity</button>
 						<button (click)="showEditListing()" class="btn btn-secondary btn-listing">Edit</button>
 						<button (click)="showConfirmDelete()" *ngIf="!enabldeDeleteOption" class="btn btn-secondary btn-listing">Delete</button>
 						<button (click)="performmDelete()" 	  *ngIf="enabldeDeleteOption"	class="btn btn-secondary btn-listing confirm-delete">Confirm</button>
+						<button (click)="showList()" class="btn btn-secondary btn-listing">Back</button>
 					</div>
 					
 					<div>
@@ -185,8 +186,8 @@
 					<!-- Action buttons -->
 					<div class="action-buttons">
 						<button class="btn btn-secondary btnRight main-btns" (click)="showFilterByJobSpecDialog(specUploadBox)" download>Create From Job Spec</button>
-						<button (click)="showPreviousShowOption()" class="btn btn-secondary btnRight main-btns">Back</button>
 						<button (click)="publishListing()" class="btn btn-secondary btnRight main-btns">Publish</button>
+						<button (click)="showPreviousShowOption()" class="btn btn-secondary btnRight main-btns">Back</button>
 					</div>
 				
 					<form [formGroup]="newListingFormBean">
@@ -434,3 +435,29 @@
 		</div>
 	</div>
 </ng-template> 
+
+<!-- Publicity Box -->
+<ng-template #publicityBox let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title">Create Email Alert</h4>
+ 		<div class="filter-close-box" (click)="closeModal()">X</div>
+	</div>
+	<div class="feedbackBox;">
+		<div class="modal-body"  style="height:400px;">
+			<p>Open Position: {{selectedListing.title}}</p>
+			<br>
+			<p>Location: {{getCountryCode(selectedListing.country)}}</p>
+			<br>
+			<p>https://www.arenella-ict.com/listing/{{selectedListing.listingId}}</p>
+			<br>
+			<span>#openposition </span>
+			<span>#itjob </span>
+			<span>#itjobs </span>
+			<span>#ictbaan </span>
+			<span>#ictbanen </span>
+			<span>#itjobboard </span>
+			<span>#cvdatabase </span>
+			<span *ngFor="let skill of selectedListing.skills">#{{skill}} </span>
+		</div>
+	</div>
+</ng-template>
