--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -340,7 +340,6 @@
 				</div>
 			</div>			
 		</div>
-	
 </div>
 
 <ng-template #feedbackBox let-modal>
@@ -458,6 +457,54 @@
 			<span>#itjobboard </span>
 			<span>#cvdatabase </span>
 			<span *ngFor="let skill of selectedListing.skills">#{{skill}} </span>
+		</div>
+	</div>
+</ng-template>
+
+<!-- Marketplace Box -->
+<ng-template #marketplaceBox let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title">Marketplace</h4>
+ 		<div class="filter-close-box" (click)="closeModal()">X</div>
+	</div>
+	<div class="feedbackBox;">
+		<div class="modal-body"  style="height:400px;">
+			<h3>Add to Marketplace</h3>
+			<p>
+			Confirm to add the role to the Marketplace where other recruiters will be able to contact 
+			you with suitable candidates that they have available.
+			</p>
+			<div style="min-width:320px;">
+				
+				<form [formGroup]="mpFormBean">
+					<table style="width:100%">
+						<tr>
+							<td style="text-align:left;">Role Start Date</td>
+							<td style="padding-left:10px;"><input type="date" formControlName="startDate"/></td>
+						</tr>
+						<tr>
+							<td style="text-align:left;">Last submission Date</td>
+							<td style="padding-left:10px;"><input type="date" formControlName="lastSubmissionDate"/></td>
+						</tr>
+						<tr>
+							<td style="text-align:left;" colspan="2">Comment's</td>
+	
+						</tr>
+						<tr>
+							<td colspan="2">	
+								<textarea style="width:100%;" formControlName="comments"></textarea>
+							</td>
+						</tr>
+					</table>
+				</form>
+			</div>
+			
+			<br>
+			<div>
+				<button class="btn btn-secondary btn-action suggestion-button" (click)="declineMarketplace()">Decline</button>
+				<button class="btn btn-secondary btn-action suggestion-button" (click)="publishOpenPosition()">Agree</button>
+			</div>
+			
 		</div>
 	</div>
 </ng-template>
