--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
@@ -205,3 +205,9 @@ textarea {
     width:100%;
     height:200px;
 }
+
+.no-account{
+	text-align:center;
+	font-weight:bold;
+	margin-top:120px;
+}
