--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -229,3 +229,85 @@ td{
 	margin-top:5px;
 	
 }
+
+
+
+.left-box{
+	min-width:300px;
+	margin-bottom:30px;
+	max-width:300px;
+}
+
+.left-box-body{
+	padding:5px;
+	background:#e8e8e8;
+}
+
+.left-box table{
+	width:100%;
+}
+
+.left-box table th{
+	width:120px;
+}
+
+.left-box h5{
+	border-bottom:2px solid black;
+}
+
+.skill{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ 	background:green;
+ 	color:white;
+}
+
+.profile-photo-details{
+	width:300px;
+	height:320px;
+	border:2px solid lightgrey;
+	margin-bottom:10px;
+}
+
+.main-btns{
+	width:200px;
+	margin-right:10px;
+	margin-bottom:10px;
+	margin-top:5px;
+	
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-body{
+	font-size: large;
+	height:300px;
+	text-align: center;
+}
+
+.modal-body-text{
+	vertical-align: middle;
+	margin-top: 60px;
+	font-weight: bold;
+}
+
+.feedbackBox{
+	padding:20px;
+	min-height:200px;
+	font-weight:bold;
+	width:100%;
+}
+
+.listing-view-title{
+	margin-top:20px;
+	color:#6A5ACD;
+}
+
+.listing-view-div{
+	margin-top:10px;
+}
