--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -313,87 +313,130 @@
 		</div>
 		
 		<!-- Show Supply Details -->
+		
+		
 		<div *ngIf="showSupplyDetails">
 			<div class="action-buttons">
 				<button class="btn btn-secondary btnRight main-btns" (click)="showOfferedCandidates()">Back</button>
-				<button class="btn btn-secondary btnRight main-btns" (click)="contactRecruiter(contactBox)" *ngIf="isMyCandidate()" disabled>Contact</button>
-				<button class="btn btn-secondary btnRight main-btns" (click)="contactRecruiter(contactBox)" *ngIf="!isMyCandidate()">Contact</button>
 			</div>
-			<div style='clear:both'>
-				<div style="margin-left:10px;margin-bottom:20px;">
-					<h3>{{activeCandidate.created}}: <span class="candidate-title">{{activeCandidate.candidateRoleTitle}}</span></h3>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Offered By</h3>
-					<table>
-						<tr>
-							<td class="table-hdr-td">Company</td>
-							<td class="table-bdy-td">{{activeCandidate.recruiter.companyName}}</td>
-						</tr>
-						<tr>
-							<td class="table-hdr-td">Recruiter</td>
-							<td class="table-bdy-td">{{activeCandidate.recruiter.recruiterName}}</td>
-						</tr>
-					</table>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Location</h3>
-					<table>
-						<tr>
-							<td class="table-hdr-td">Country</td>
-							<td class="table-bdy-td">{{activeCandidate.country}}</td>
-						</tr>
-						<tr>
-							<td class="table-hdr-td">Location</td>
-							<td class="table-bdy-td">{{activeCandidate.location}}</td>
-						</tr>
-					</table>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Years Experience</h3>
-					<p>{{activeCandidate.yearsExperience}}</p>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Skills</h3>
-					<div style="padding:10px;">
-						<span class="static-item" *ngFor="let lang of activeCandidate.coreSkills">{{lang}}</span>
+			<div>
+      			<div style="float:left; min-width:300px; margin-top:20px;">
+      				<h1 *ngIf="isMobile" class="listing-view-title">{{activeCandidate.candidateRoleTitle}}</h1>
+      				<div class="left-box">
+     					<div>
+     						<img class="profile-photo-details" *ngIf="recruiterProfile?.profilePhoto?.imageBytes" id='base64image' src='data:image/jpeg;base64, {{recruiterProfile?.profilePhoto?.imageBytes}}' />
+						<div *ngIf="!recruiterProfile?.profilePhoto?.imageBytes && !isMobile" class="profile-photo-details material-icons person ">
+						<span style="font-size:300px;color:green;">person</span>
+						</div>
+						<br>
+						<br>
+							<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" (click)="contactRecruiter(contactBox)" *ngIf="isMyCandidate()" disabled>Contact</button>
+							<button class="btn btn-secondary action-btn main-action_btn main-btns main-bt" style="width:300px;margin-bottom:10px;background:green;" (click)="contactRecruiter(contactBox)" *ngIf="!isMyCandidate()">Contact</button>
+						<br>
+     				</div>
+     				<div class="left-box">
+     					<h5>Recruiter Details</h5>
+     					<div class="left-box-body">
+      						<table>
+      							<tr>
+      								<th>Name</th>
+      								<td>{{recruiterProfile.recruiterFirstName}} {{recruiterProfile.recruiterSurname}}</td>
+      							</tr>
+      							<tr>
+      								<th>Company</th>
+      								<td>{{recruiterProfile.companyName}}</td>
+      							</tr>
+      						</table>
+     					</div>
+     				</div>
+     			</div>
+      						
+				<div class="left-box" *ngIf="activeCandidate.country || activeCandidate.location">
+					<h5>Location</h5>
+					<div class="left-box-body">
+						<table>
+							<tr *ngIf="activeCandidate.country">
+								<th>Country</th>
+								<td>{{getCountryCode(activeCandidate.country)}}</td>
+							</tr>
+							<tr *ngIf="activeCandidate.location">
+								<th>City</th>
+								<td>{{activeCandidate.location}}</td>
+							</tr>
+						</table>
 					</div>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Languages</h3>
-					<div style="padding:10px;">
-						<span class="static-item" *ngFor="let lang of activeCandidate.spokenLanguages">{{lang}}</span>
-					</div>
-				</div>
-				<div class="open-position-view-div-standard">
-					<h3>Conditions</h3>
-					<table>
-						<tr>
-							<td class="table-hdr-td">Contract Type</td>
-							<td class="table-bdy-td">{{activeCandidate.contractType}}</td>
-						</tr>
-						<tr>
-							<td class="table-hdr-td">Days On Site</td>
-							<td class="table-bdy-td">{{activeCandidate.daysOnSite}}</td>
-						</tr>
-						<tr>
-							<td class="table-hdr-td">Salary / Rate</td>
-							<td class="table-bdy-td">{{activeCandidate.renumeration}}</td>
-						</tr>
-					</table>
-				</div>
-				<div class="candidate-view-div">
-					<h3>Description</h3>
-					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;padding:10px;">{{activeCandidate.description}}</pre>
 				</div>
 				
-				<div class="candidate-view-div">
-					<h3>Recruiter Comments</h3>
-					<p>{{activeCandidate.comments}}</p>
-				</div>
-				<div class="candidate-view-div-footer"></div>
-			</div>
+				<div class="left-box">
+   					<h5>Years Experience</h5>
+   					<div class="left-box-body">
+   						{{activeCandidate.yearsExperience}}
+   					</div>	
+   				</div>
+   				<div class="left-box" *ngIf="activeCandidate.spokenLanguages.length > 0">
+   					<h5>Languages</h5>
+   					<div class="left-box-body">
+						<table>
+							<tr *ngFor="let language of activeCandidate.spokenLanguages">
+								<td>{{getLanguage(language)}}</td>
+							</tr>
+						</table>
+					</div>
+   				</div>
+   				<div class="left-box" *ngIf="activeCandidate.coreSkills.length > 0">
+   					<h5>Skills</h5>
+   					<div class="left-box-body">
+						<table>
+							<tr>
+								<td><span class="skill" *ngFor="let skill of activeCandidate.coreSkills">{{skill}}</span></td>
+							</tr>
+						</table>
+					</div>
+      			</div>	
+      			
+      			<div class="left-box" *ngIf="activeCandidate.contractType || activeCandidate.daysOnSite || activeCandidate.renumeration">
+					<h5>Conditions</h5>
+					<div class="left-box-body">
+						<table>
+							<tr *ngIf="activeCandidate.contractType">
+								<th>Contract Type</th>
+								<td>{{getContractType(activeCandidate.contractType)}}</td>
+							</tr>
+							<tr *ngIf="activeCandidate.daysOnSite">
+								<th>Days On Site</th>
+								<td>{{activeCandidate.daysOnSite}}</td>
+							</tr>
+							<tr *ngIf="activeCandidate.renumeration">
+								<th>Rate/Salary</th>
+								<td>{{activeCandidate.renumeration}}</td>
+							</tr>
+						</table>
+					</div>
+					
+				</div>	
+				
+				
+				
+      				
 		</div>
+		
+		<div style="float:left;margin-left:10px;min-width:300px;max-width:72%;padding:5px;">
+      		<div class="listing-view-div">
+				<h1 *ngIf="!isMobile" class="listing-view-title">{{activeCandidate.candidateRoleTitle}}</h1>
+				<h1 *ngIf="isMobile" class="listing-view-title">Description</h1>
+			</div>
+			<div>
+				<div>
+					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeCandidate.description}}</pre>
+				</div>
+			</div>
+			<div *ngIf="activeCandidate.comments">
+				<h1 *ngIf="isMobile" class="listing-view-title">Comments</h1>
+				<div>
+					<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{activeCandidate.comments}}</pre>
+				</div>
+			</div>
+      	</div>
 		
 		<!-- Show Demand  -->
 		<div *ngIf="showDemand">
